# vatEvo

./: .gitignore  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  RUNBOOK_DEPLOY.md  RUNBOOK_DNS_CUTOVER.md  package-lock.json  package.json  turbo.json  vercel.json  verify-release.sh
.do/: app.yaml
.github/: RELEASE_CHECKLIST.md  RELEASE_DRAFT_v0.1.0.md
.github/workflows/: api-deploy-prod.yml  api-deploy.yml  api-prod.yml  ci.yml  do-app-deploy.yml  docs-deploy.yml  e2e-prod-smoke.yml  perf-smoke.yml  uptime.yml  web-deploy.yml
apps/api/: Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
apps/api/app/: auth.py  compliance.py  config.py  database.py  main.py  models.py  rate_limiting.py  schemas.py  webhooks.py
apps/api/app/adapters/: __init__.py  base.py  ksef.py  peppol.py  ppf.py
apps/api/tests/: conftest.py  test_auth.py  test_main.py  test_models.py  test_status.py
apps/dashboard/: README.md  jest.config.js  jest.config.ts  package.json
apps/dashboard/src/__tests__/: auth-form.test.tsx
apps/dashboard/src/app/: page.tsx
apps/dashboard/src/app/webhooks/: page.tsx
apps/dashboard/src/components/: auth-form.tsx  dashboard-layout.tsx  invoice-form.tsx  invoice-list.tsx  webhook-tester.tsx
apps/dashboard/src/components/ui/: input.tsx
apps/dashboard/src/lib/: api.ts  utils.ts
apps/docs/: docusaurus.config.js  package.json  sidebars.js
apps/docs/docs/: intro.md  quickstart.md
apps/docs/src/pages/: api.tsx
apps/marketing/: package.json
apps/marketing/src/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
apps/marketing/src/app/compare/: page.tsx
apps/marketing/src/components/: Footer.tsx  Navbar.tsx
artifacts/links/: uptime_latest.txt
artifacts/reports/: smoke_v0.1.0.txt  smoke_v0.1.0_custom_domains.txt
docs/: API_KEYS.md  ARCHITECTURE.md  BACKUP_DR_RUNBOOK.md  CHANGELOG.md  COMPLIANCE_MATRIX.md  CRM_WEBHOOK.md  DEMO_RUN.md  DNS_SSL_REPORT.md  ENV_CHECKLIST.md  ERRORS.md  FLY_DOMAIN_CERT_INSTRUCTIONS.md  HANDOVER.md  PRICING_NOTES.md  QUICKSTART.md  S3_WORM_GUIDE.md  SECRETS_CHECKLIST.md  SECURITY_CHECKLIST.md  SLOS.md  STATUS.md  TASKS.md  TESTS.md  VATEVO.postman_collection.json  VERCEL_DOMAIN_BINDING_INSTRUCTIONS.md  WEBHOOKS.md
docs/postman/: VATEVO.postman_environment.json
examples/node/express/: package.json  server.js
examples/python/fastapi/: main.py
infra/: fly.toml
infra/db/: README.md
legal/: DPA_TEMPLATE.md  DPIA_TEMPLATE.md  PRIVACY_POLICY_DRAFT.md  SECURITY_POLICY.md  SLA_TEMPLATE.md
ops/api/: smoke.sh
ops/db/: backup_smoke.sql  check_connection.py  prepare_postgres.sh  restore_smoke.sql
ops/demo/: reset.sh  seed.sh  snapshots.spec.ts
ops/dns/: verify.sh
ops/load/: k6_api_smoke.js
sdks/python/: README.md  pyproject.toml
sdks/python/src/vatevo/: __init__.py  client.py  models.py
sdks/typescript/: README.md  package.json
sdks/typescript/src/: index.ts
(+9 files in other folders)
